--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
 
 * {
     margin: 0;
@@ -6,8 +6,7 @@
 }
 
 body {
-    font-family: 'Lato', sans-serif;
-    font-size: 15px;
+    font-family: 'Outfit', sans-serif;    font-size: 15px;
     font-weight: 400;
     background-color:hsl(212, 45%, 89%);
     color: hsl(220, 15%, 55%);
@@ -25,6 +24,8 @@ body {
     width: 90%;
     padding: 1em;
     border-radius: 15px;
+    box-shadow: 0px 10px 15px -3px hsl(212, 45%, 89%),0px 10px 15px -3px rgba(0,0,0,0.1),0px 10px 15px -3px rgba(0,0,0,0.1);
+
 }
 
 p {
