--- a/style.css
+++ b/style.css
@@ -1,59 +1,57 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap');
 
-* {
-    margin: 0;
-    box-sizing: border-box;
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+:root {
+    --color-white: hsl(0, 0%, 100%);
+    --color-light-gray: hsl(212, 45%, 89%);
+    --color-grayish-blue: hsl(220, 15%, 55%);
+    --color-dark-blue: hsl(218, 44%, 22%);
 }
 
 body {
-    font-family: 'Outfit', sans-serif;    font-size: 15px;
-    font-weight: 400;
-    background-color:hsl(212, 45%, 89%);
-    color: hsl(220, 15%, 55%);
-    min-height: 100vh;
     display: flex;
-    flex-direction: column;
-    align-items: center;
     justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background-color: var(--color-light-gray);
+    font-family: 'Outfit', sans-serif;
     font-size: 0.9375rem;
-}
-
-.card {
-    background-color: hsl(0, 0%, 100%);
-    text-align: center;
-    width: 90%;
-    padding: 1em;
-    border-radius: 15px;
-    box-shadow: 0px 10px 15px -3px hsl(212, 45%, 89%),0px 10px 15px -3px rgba(0,0,0,0.1),0px 10px 15px -3px rgba(0,0,0,0.1);
-
-}
-
-h1, p {
-    margin-top: 1em;
-    margin-bottom: 1em;
-}
-
-h1 {
-    color: hsl(218, 44%, 22%);
-    font-weight: 700;
+    font-weight: 400;
+    text-align: center;  
 }
 
 img {
-    display: block;
     max-width: 100%;
+    display: block;
     border-radius: 10px;
 }
 
-
-
-@media (min-width: 700px) {
-    .card {
-        width: 50%;
-    }
+article {
+    width: min(100vw - 2.5rem, 20.125rem);
+    background-color: var(--color-white);
+    padding: 1.125rem;
+    border-radius: 20px;
 }
 
-@media (min-width: 920px) {
-    .card {
-        width: 30%;
-    }
+div {
+    padding-inline: 0.75rem;
+}
+
+h1 {
+    font-size: 1.25rem;
+    font-weight: 700;
+    color: var(--color-dark-blue);
+    margin-block: 1.875rem 1rem;
+}
+
+p {
+    color: var(--color-grayish-blue);
+    margin-bottom: 1.375rem;
 }
