--- a/style.css
+++ b/style.css
@@ -36,8 +36,9 @@ img {
 article {
     width: min(100vw - 2.5rem, 20.125rem);
     background-color: var(--color-white);
-    padding: 1.125rem;
+    padding: 1rem;
     border-radius: 20px;
+    box-shadow: 0px 25px 25px rgba(0, 0, 0, 0.0476518);
 }
 
 div {
@@ -45,7 +46,8 @@ div {
 }
 
 h1 {
-    font-size: 1.25rem;
+    font-size: 1.375rem;
+    line-height: 28px;
     font-weight: 700;
     color: var(--color-dark-blue);
     margin-block: 1.5rem 1rem;
@@ -53,5 +55,6 @@ h1 {
 
 p {
     color: var(--color-grayish-blue);
-    margin-bottom: 1.375rem;
+    margin-bottom: 1.5rem;
+    line-height: 19px;
 }
