--- a/style.css
+++ b/style.css
@@ -22,8 +22,6 @@ body {
     min-height: 100vh;
     background-color: var(--color-light-gray);
     font-family: 'Outfit', sans-serif;
-    font-size: 0.9375rem;
-    font-weight: 400;
     text-align: center;  
 }
 
@@ -34,9 +32,9 @@ img {
 }
 
 article {
-    width: min(100vw - 2.5rem, 20.125rem);
-    background-color: var(--color-white);
+    width: 20rem;
     padding: 1rem;
+    background-color: var(--color-white);
     border-radius: 20px;
     box-shadow: 0px 25px 25px rgba(0, 0, 0, 0.0476518);
 }
@@ -47,8 +45,8 @@ div {
 
 h1 {
     font-size: 1.375rem;
-    line-height: 28px;
     font-weight: 700;
+    line-height: normal;
     color: var(--color-dark-blue);
     margin-block: 1.5rem 1rem;
 }
@@ -56,5 +54,8 @@ h1 {
 p {
     color: var(--color-grayish-blue);
     margin-bottom: 1.5rem;
-    line-height: 19px;
+    font-size: 0.9375rem;
+    font-weight: 400;
+    line-height: normal;
+    letter-spacing: 0.01175rem;
 }
